Cleaned up some junk
Conflicts:
	genmegqblh_cublas.f90 (deleted)

--- a/utilities/pp_u/Makefile
+++ b/utilities/pp_u/Makefile
@@ -12,6 +12,6 @@ mod_hdf5.o:
 
 pp_u4: mod_hdf5.o pp_u4.o 
 	$(F90) -o $@ mod_hdf5.o pp_u4.o $(LIBS)
-		
+
 clean:
-	rm *.o *.mod
+	rm pp_u4 *.o *.mod
