Cherry-picked hunks of cuda-hydra/7ca103 [^a]; Added install section into some Makefiles [^b]; Added some make.inc files for TAU [^c]
[^a]: commit 7ca103 from cuda-hydra is
> Added F90SERIAL into Makefiles`

[^b]: Specifically, the Makefiles for utilities/pp and utilities/spacegroup

[^c]: These are for IBM XL and PGI compilers, but they don't work yet (ongoing OLCF support ticket 419691).
The [compile script](compile-summit.sh) has been updated, but will quit immediately if the TAU make.inc files are specified.

Conflicts:
	make.inc.beacon.intel 		(removed)
	make.inc.beacon.intel.gpu	(removed)
	make.inc.hydra.gcc.mkl.gpu	(removed)
	make.inc.local.gcc.cpu  	(modified)
	utilities/pp/Makefile   	(modified)
	utilities/spacegroup/Makefile	(modified)

--- a/src/Makefile
+++ b/src/Makefile
@@ -36,7 +36,7 @@ SRC_modules = ./addons/mod_mpi_grid.f90 \
               ./addons/mod_ws.f90 \
               ./addons/mod_rs.f90 \
               ./addons/mod_libapw.f90
-              
+
 OBJ_modules = $(SRC_modules:.f90=.o)
 SRC = $(shell find . -name \*.f90)
 OBJ = $(SRC:.f90=.o)
@@ -59,7 +59,7 @@ EXE = elk
 #-------------------------------------------------------------------------------
 all: gensrc extras elk
 
-serial: F90_OPTS:=$(subst -D_MPI_,,$(F90_OPTS)) 
+serial: F90_OPTS:=$(F90_OPTS_SERIAL)
 serial: gensrc elk lib
 
 gensrc:
@@ -84,7 +84,7 @@ lib:
 
 modclean:
 	rm $(OBJ_modules)
-	
+
 clean:
 	find . -name \*.o -exec rm {} \;
 	find . -name \*.mod -exec rm {} \;
