--- a/utilities/pp_u/Makefile
+++ b/utilities/pp_u/Makefile
@@ -1,17 +1,16 @@
 include ../../make.inc
-F90_OPTS_SERIAL=$(subst -D_MPI_,,$(F90_OPTS))
 
 .SUFFIXES: .o .f90
 .f90.o:
-	$(F90) $(F90_OPTS_SERIAL) -c -o $(*F).o $<
+	$(F90SERIAL) $(F90_OPTS_SERIAL) -c -o $(*F).o $<
 
 all: pp_u4
 
 mod_hdf5.o:
-	$(F90) -c $(F90_OPTS_SERIAL) ../../src/addons/mod_hdf5.f90 -o mod_hdf5.o
+	$(F90SERIAL) -c $(F90_OPTS_SERIAL) ../../src/addons/mod_hdf5.f90 -o mod_hdf5.o
 
 pp_u4: mod_hdf5.o pp_u4.o 
-	$(F90) -o $@ mod_hdf5.o pp_u4.o $(LIBS)
+	$(F90SERIAL) -o $@ mod_hdf5.o pp_u4.o $(LIBS)
 
 clean:
 	rm pp_u4 *.o *.mod
