--- a/utilities/pp/Makefile
+++ b/utilities/pp/Makefile
@@ -18,4 +18,19 @@ install: pdos bndchr
 	cp ./bndchr ../../bin/bndchr-${COMPILER}
 
 clean:
-	rm pdos bndchr *.o
+	-rm pdos bndchr *.o
+
+lsutil:
+	echo "pp:  pdos bndchr"
+
+utilhelp: | lsutil
+	echo "Post processing utilities for ground state"
+	echo "- pdos"
+	echo "  For use with output from Exciting-Plus task 811 (dosrlm)."
+	echo "  Extracts the projected density of states from PDOS.OUT"
+	echo "  for Bloch and/or Wannier basis."
+	echo "- bndchr"
+	echo "  For use with output from Exciting-Plus task 822 (bandrlm)."
+	echo "  Extracts the l-resolved band structure from BNDCHR.OUT"
+	echo "  for Bloch and/or Wannier basis."
+	echo "TODO: write input documentation"
