--- a/src/Makefile
+++ b/src/Makefile
@@ -35,7 +35,8 @@ SRC_modules = ./addons/mod_mpi_grid.f90 \
               ./addons/sic/mod_sic.f90 \
               ./addons/mod_ws.f90 \
               ./addons/mod_rs.f90 \
-              ./addons/mod_libapw.f90
+              ./addons/mod_libapw.f90 \
+              ./addons/mod_magma.f90
 
 OBJ_modules = $(SRC_modules:.f90=.o)
 SRC = $(shell find . -name \*.f90)
